Fix horizontal scroll

--- a/public/css/styleMobileC.scss
+++ b/public/css/styleMobileC.scss
@@ -70,7 +70,7 @@
 }
 
 .sectionHeader {
-  font-size: 2em;
+  font-size: 2.5em;
 }
 
 input, textarea {
